--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-dropdown-menu": "^2.1.12",
+		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-tabs": "^1.1.9",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.43.1",
+		"framer-motion": "^12.9.4",
+		"lucide-react": "^0.503.0",
 		"next": "15.3.1",
 		"pg": "^8.15.6",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.2.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
@@ -28,6 +36,7 @@
 		"eslint-config-next": "15.3.1",
 		"tailwindcss": "^4",
 		"tsx": "^4.19.4",
+		"tw-animate-css": "^1.2.8",
 		"typescript": "^5"
 	}
 }
