--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-dropdown-menu": "^2.1.12",
+		"@radix-ui/react-label": "^2.1.4",
+		"@radix-ui/react-progress": "^1.1.4",
+		"@radix-ui/react-select": "^2.2.2",
 		"@radix-ui/react-slot": "^1.2.0",
 		"@radix-ui/react-tabs": "^1.1.9",
 		"class-variance-authority": "^0.7.1",
@@ -22,8 +25,8 @@
 		"pg": "^8.15.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"uuid": "^11.1.0",
-		"tailwind-merge": "^3.2.0"
+		"tailwind-merge": "^3.2.0",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
