--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 		"@radix-ui/react-select": "^2.2.2",
 		"@radix-ui/react-slot": "^1.2.0",
 		"@radix-ui/react-tabs": "^1.1.9",
+		"@tanstack/react-query": "^5.75.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.43.1",
 		"framer-motion": "^12.9.4",
