--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
 		"@radix-ui/react-tabs": "^1.1.9",
 		"@supabase/ssr": "^0.6.1",
 		"@tanstack/react-query": "^5.75.2",
+		"@types/jsonwebtoken": "^9.0.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.43.1",
 		"framer-motion": "^12.9.4",
+		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.503.0",
 		"next": "15.3.1",
 		"pg": "^8.15.6",
