--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
 	},
 	"dependencies": {
 		"@base-ui-components/react": "^1.0.0-alpha.8",
+		"@radix-ui/react-context-menu": "^2.2.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.12",
 		"@radix-ui/react-label": "^2.1.4",
 		"@radix-ui/react-progress": "^1.1.4",
 		"@radix-ui/react-select": "^2.2.2",
-		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-slot": "^1.2.2",
 		"@radix-ui/react-tabs": "^1.1.9",
 		"@supabase/ssr": "^0.6.1",
 		"@tanstack/react-query": "^5.75.2",
@@ -24,6 +25,7 @@
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.43.1",
+		"embla-carousel-react": "^8.6.0",
 		"framer-motion": "^12.9.4",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.503.0",
