--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.43.1",
+		"embla-carousel-autoplay": "^8.6.0",
 		"embla-carousel-react": "^8.6.0",
 		"framer-motion": "^12.9.4",
 		"jsonwebtoken": "^9.0.2",
