--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@radix-ui/react-select": "^2.2.2",
 		"@radix-ui/react-slot": "^1.2.2",
 		"@radix-ui/react-tabs": "^1.1.9",
+		"@radix-ui/react-tooltip": "^1.2.7",
 		"@supabase/ssr": "^0.6.1",
 		"@tanstack/react-query": "^5.75.2",
 		"@types/jsonwebtoken": "^9.0.9",
