--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     },
     "dependencies": {
         "@base-ui-components/react": "^1.0.0-alpha.8",
+        "@radix-ui/react-alert-dialog": "^1.1.14",
+        "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-context-menu": "^2.2.14",
+        "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-dropdown-menu": "^2.1.12",
         "@radix-ui/react-label": "^2.1.4",
         "@radix-ui/react-progress": "^1.1.4",
         "@radix-ui/react-select": "^2.2.2",
-        "@radix-ui/react-slot": "^1.2.2",
+        "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.1.9",
         "@radix-ui/react-tooltip": "^1.2.7",
         "@supabase/ssr": "^0.6.1",
